Fixed some alignment in the SkillsSection

--- a/src/components/skills-section/SkillsSection.module.css
+++ b/src/components/skills-section/SkillsSection.module.css
@@ -39,7 +39,7 @@
 }
 
 .skillsTitle {
-	padding-bottom: 5em;
+	padding-bottom: 2em;
 }
 
 .subTitle {
